# spaceY-rocket-framework

./: .gitignore  .gitmodules  Actuator.h  CMakeLists.txt  IMU.h  README.md  asd.cpp  build.sh  calibrator.cpp  main  main.cpp  maint.cpp  makefile  test  test.cpp  todo(help me).txt  version_check.cpp
.VSCodeCounter/2023-10-11_17-08-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
classes/: Clock.cpp  IMU.h  Rocket.h  RocketModule.cpp  TextDataSaver.cpp
control-cli/: control-cli.cpp
data/IMU logs/: 2024-01-11@07-11-18_mainIMU  2024-01-11@07-14-48_mainIMU  2024-01-11@07-15-23_mainIMU  2024-01-11@07-16-35_mainIMU
data/flight logs/: 2023-11-20@01-53-18_flight_log  2023-12-18@23-00-52_flight_log  2023-12-18@23-04-00_flight_log  2024-01-11@07-11-18_flight_log  2024-01-11@07-11-45_flight_log  2024-01-11@07-13-22_flight_log  2024-01-11@07-13-41_flight_log  2024-01-11@07-14-10_flight_log  2024-01-11@07-14-48_flight_log  2024-01-11@07-15-23_flight_log  2024-01-11@07-16-08_flight_log  2024-01-11@07-16-35_flight_log
firmware/: Bosch_APP30_SHUTTLE_BHI260-flash.fw.h  Bosch_APP30_SHUTTLE_BHI260.fw.h  Bosch_APP30_SHUTTLE_BHI260_BME68x-flash.fw.h  Bosch_APP30_SHUTTLE_BHI260_BME68x.fw.h  Bosch_APP30_SHUTTLE_BHI260_BMP390-flash.fw.h  Bosch_APP30_SHUTTLE_BHI260_BMP390.fw.h  Bosch_APP30_SHUTTLE_BHI260_aux_BMM150-flash.fw.h  Bosch_APP30_SHUTTLE_BHI260_aux_BMM150.fw.h  Bosch_APP30_SHUTTLE_BHI260_turbo-flash.fw.h  Bosch_APP30_SHUTTLE_BHI260_turbo.fw.h  Bosch_Shuttle3_BHI360.fw  Bosch_Shuttle3_BHI360.fw.h  Bosch_Shuttle3_BHI360_Aux_BMM150.fw  Bosch_Shuttle3_BHI360_Aux_BMM150.fw.h  Bosch_Shuttle3_BHI360_BMM150.fw  Bosch_Shuttle3_BHI360_BMM150.fw.h  Bosch_Shuttle3_BHI360_BMM150_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_BMM150_HeadOrientation_hearable.fw.h  Bosch_Shuttle3_BHI360_BMM350C.fw  Bosch_Shuttle3_BHI360_BMM350C.fw.h  Bosch_Shuttle3_BHI360_BMM350C_BMP580_BME688.fw.h  Bosch_Shuttle3_BHI360_BMM350C_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_BMM350C_HeadOrientation_hearable.fw.h  Bosch_Shuttle3_BHI360_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_HeadOrientation_hearable.fw.h  Bosch_Shuttle3_BHI360_Turbo.fw  Bosch_Shuttle3_BHI360_Turbo.fw.h  README.md
headers/: Actuator.h  Clock.h  CommunicationSystem.h  FlightLogger.h  IMU.h  Rocket.h  RocketModule.h  Sensor.h  TextDataSaver.h
include/: Actuator.h  Clock.h  CommunicationSystem.h  FlightLogger.h  FuelCellIgniter.h  IMU.h  ParachuteController.h  RocketModule.h  Sensor.h  TextDataSaver.h  constants.h  debug_param.h  defs.h  param.h  utils.h
include/Actuators/: FuelCellIgniter.h  ImageDataSaver.h
include/HardwareLinks/: HardwareLink_bosch.h
include/Sensors/: Accelerometer.h  Altimeter.h  Camera.h  DEPRECATED_IMU.h  Gyroscope.h  Thermometer.h
include/Systems/: Clock.h  FlightLogger.h  Rocket.h
include/actuator/: FuelCellIgniter.h  ImageDataSaver.h  KinematicDataProcessor.h  OnboardLed.h  ParachuteController.h  ParachuteDeployer.h  TextDataSaver.h
include/base_class/: Actuator.h  Command.h  HardwareController.h  HardwareLink.h  RocketModule.h  Sensor.h
include/consumer/: LogWriter.h
include/control_interface/: IAccelerometerControl.h  IAltimeterControl.h  IAngularAccelerometerControl.h  IFileSystemContol.h  IGyroscopeControl.h  ILedControl.h  IServoControl.h
include/hardware/: DS3231.h  GPIO.h
include/hardware_controller/: HardwareController_mpu6050.h  HardwareController_picoonboardled.h  HardwareController_servotype0.h  HardwareController_usbfilesystem.h
include/hardware_link/: HardwareLink_mpu6050.h  HardwareLink_picoonboardled.h  HardwareLink_servotype0.h
include/sensor/: Accelerometer.h  Altimeter.h  AngularAccelerometer.h  Camera.h  DEPRECATED_IMU.h  Gyroscope.h  Thermometer.h
include/software/: LogWriter.h
include/struct/: AccelerometerDataPack.h  AngularAccelerometerDataPack.h  GyroscopeDataPack.h
include/system/: Clock.h  CommunicationSystem.h  FlightLogger.h  RocketState.h
include/tinyusb/: tusb_config.h  usb.h
include/util/: CircularBuffer.h
lib/: I2Cdev.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps_V6_12.h
lib/ff15/: CMakeLists.txt
lib/rfw/: CMakeLists.txt
logs/IMU logs/: 2023-10-12@14-31-56_mainIMU  2023-10-14@00-22-01_mainIMU
logs/flight logs/: 2023-10-11@22-14-21_flight_log  2023-10-11@22-15-19_flight_log  2023-10-11@22-19-42_flight_log  2023-10-11@22-20-05_flight_log  2023-10-11@22-21-07_flight_log  2023-10-11@22-22-11_flight_log  2023-10-12@13-17-53_flight_log  2023-10-12@13-18-06_flight_log  2023-10-12@13-18-45_flight_log  2023-10-12@14-27-28_flight_log  2023-10-12@14-30-46_flight_log  2023-10-12@14-31-07_flight_log  2023-10-12@14-31-17_flight_log  2023-10-12@14-31-56_flight_log  2023-10-12@17-25-34_flight_log  2023-10-14@00-22-01_flight_log
src/: Clock.cpp  FuelCellIgniter.cpp  ParachuteController.cpp  Rocket.cpp  Sensor.cpp  defs.h  main.cpp  test.cpp  utils.cpp
src/HardwareLinks/: HardwareLink_bosch.cpp
src/Sensors/: DEPREACATED_IMU.cpp  Thermometer.cpp
src/Systems/: Clock.cpp  CommunicationSystem.cpp  FlightLogger.cpp
src/actuator/: FuelCellIgniter.cpp  KinematicDataProcessor.cpp  OnboardLed.cpp  ParachuteController.cpp  ParachuteDeployer.cpp  TextDataSaver.cpp
src/base_class/: Actuator.cpp  HardwareController.cpp  HardwareLink.cpp  RocketModule.cpp  Sensor.cpp
src/consumer/: LogWriter.cpp
src/hardware/: BHI360.cpp  BHI360_utils.cpp  DS3231.cpp  USBDebug.cpp  USBStorage.cpp
src/hardware_controller/: HardwareController_mpu6050.cpp  HardwareController_picoonboardled.cpp  (+1 more)
src/provider/: DS3231.cpp
tools/: CMakeLists.txt
tools/host/rtc-setup-host/src/: main.cpp
tools/rp2040/cdc-msc-hid/: README.md
tools/rp2040/cdc-msc-hid/src/: main.c  usb_cdc.h
tools/rp2040/pico-uart-bridge/: LICENSE.md  README.md  tusb_config.h  uart-bridge.c  usb-descriptors.c
util/: CMakeLists.txt  blink.cpp  test.cpp  version_check.cpp
util/cdc-msc-hid/: CMakeLists.txt
util/pico-uart-bridge/: CMakeLists.txt
util/rtc-setup-host/: CMakeLists.txt
util/rtc-setup-host/src/: handle.hpp
(+51 files in other folders)
